k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-scheduler
spec:
  selector:
    app: events-scheduler
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8282
  type: ClusterIP
