k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: events-scheduler-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Temporarily disable SSL redirection
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: scheduler.xilonen.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: events-scheduler
            port:
              number: 80
